# catchcmake-modular

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  main.cpp
src/PersonModule/: CMakeLists.txt
src/PersonModule/include/PersonModule/: Person.h
src/PersonModule/src/: Person.cpp
src/PersonModule/test/: PersonTest.cpp
src/SalesDepartmentModule/: CMakeLists.txt
src/SalesDepartmentModule/include/SalesDepartmentModule/: Salesman.h
src/SalesDepartmentModule/src/: Salesman.cpp
src/SalesDepartmentModule/test/: SalesmanTest.cpp
